--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "graphql": "^0.13.2",
         "jsonwebtoken": "^8.5.1",
         "mongodb": "^3.3.5",
+        "mongoose": "^5.13.5",
         "nodemon": "^1.19.1"
     },
     "devDependencies": {
